--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~48.0.15",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.0",
     "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
