--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.11",
     "react-navigation-header-buttons": "^11.0.0",
     "react-redux": "^8.0.5",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "expo-clipboard": "~4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
